// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creating a Divider instance for size inherit 1`] = `
<div
  className="ui-divider divider inherit"
  style={
    Object {
      "width": "8px",
    }
  }
>
   
</div>
`;

exports[`Test creating a Divider instance for size large 1`] = `
<div
  className="ui-divider divider large"
  style={
    Object {
      "width": "12px",
    }
  }
>
   
</div>
`;

exports[`Test creating a Divider instance for size medium 1`] = `
<div
  className="ui-divider divider medium"
  style={
    Object {
      "width": "8px",
    }
  }
>
   
</div>
`;

exports[`Test creating a Divider instance for size normal 1`] = `
<div
  className="ui-divider divider normal"
  style={
    Object {
      "width": "8px",
    }
  }
>
   
</div>
`;

exports[`Test creating a Divider instance for size small 1`] = `
<div
  className="ui-divider divider small"
  style={
    Object {
      "width": "6px",
    }
  }
>
   
</div>
`;

exports[`Test creating a Divider instance for size xlarge 1`] = `
<div
  className="ui-divider divider xlarge"
  style={
    Object {
      "width": "16px",
    }
  }
>
   
</div>
`;

exports[`Test creating a Divider instance for size xsmall 1`] = `
<div
  className="ui-divider divider xsmall"
  style={
    Object {
      "width": "4px",
    }
  }
>
   
</div>
`;

exports[`Test creating a Divider instance for size xxlarge 1`] = `
<div
  className="ui-divider divider xxlarge"
  style={
    Object {
      "width": "24px",
    }
  }
>
   
</div>
`;

exports[`Test creating a Divider instance for size xxsmall 1`] = `
<div
  className="ui-divider divider xxsmall"
  style={
    Object {
      "width": "3px",
    }
  }
>
   
</div>
`;

exports[`Test retrieval of Divider props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "dividerType": " ",
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": false,
  "visible": true,
  "width": "",
}
`;
